fix navigation spacing

--- a/app/styles/documentation/main.scss
+++ b/app/styles/documentation/main.scss
@@ -135,7 +135,7 @@ strong {
     margin: 0;
   }
 
-  & > ul {
+  & > ul:first-child {
     margin-top: 25px;
   }
 
